Fixes margin shift when a blip is put into edit mode

--- a/extension/wave.css
+++ b/extension/wave.css
@@ -31,6 +31,9 @@
 	border-color: #4D90FE !important;
 	box-shadow: inset 0 1px 2px rgba(0,0,0,0.3) !important;
 }
+.blip-container:not(:first-child).active.edit-mode, .blip-container:not(:first-child).last-active.edit-mode {
+	margin-top: 0 !important;
+}
 .blip-menu-container:not(.fixed) {
 	left: -1px !important;
 }
